# sedkit

./: .gitignore  .readthedocs.yml  .rtd-environment.yml  .travis.yml  CITATION.cff  LICENSE  MANIFEST  MANIFEST.in  Makefile  README.md  SEDkit.rst  SEDkit.tests.rst  __init__.py  catalog.py  conf.py  environment.yml  index.rst  isochrone.py  make.bat  makeSEDs.ipynb  modelgrid.py  modules.rst  pyproject.toml  readthedocs.yml  relations.py  requirements.txt  sed.py  setup.cfg  setup.py  spectrum.py  test.txt  utilities.py
.github/workflows/: ci.yml  install_conda.sh  publish_pypi.yml  sedkit_workflow.yml  setup_conda_env.sh
.ipynb_checkpoints/: makeSEDs-checkpoint.ipynb
SEDkit/: SED.py  SEDs.py  __init__.py  catalog.py  cmd.py  cmds.py  cython_version.py  fitting.py  interact.py  isochrone.py  mcmc_fit.py  modelgrid.py  relations.py  sed.py  spectrum.py  syn_phot.py  synphot.py  utilities.py  version.py
SEDkit/Data/Filters/: DENIS.I  DENIS.J  DENIS.Ks  FourStar.H  FourStar.J3  FourStar.Ks  MIPS.24mu  NIRC2.H  NIRC2.J  NIRC2.K  NIRC2.Lp  NIRC2.Ms  UKIDSS.H  UKIDSS.J  UKIDSS.K  UKIDSS.Y  UKIDSS.Z
SEDkit/Data/Pickles/: mag_mag_relations.p  polynomial_relations.p
SEDkit/data/: AFGK_radii.txt  L3_photometry.txt  L3_spectrum.fits  M0V_photometry.txt  M0V_spectrum.txt  MLTY_radii.txt  STScI_Vega.txt  coords.txt
SEDkit/data/bandpasses/: ACS_HRC.F555W  ACS_HRC.F775W  ACS_HRC.F850LP  FourStar.J  GALEX.FUV  GALEX.NUV  Gaia.bp  Gaia.rp  MIRI.F1000W  MIRI.F2100W  MIRI.F2550W  MIRI.F560W  NIRCam.F070W  NIRCam.F140M  NIRCam.F150W2  NIRCam.F164N  NIRCam.F187N  NIRCam.F200W  NIRCam.F210M  NIRCam.F212N  NIRCam.F250M  NIRCam.F277W  NIRCam.F322W2  NIRCam.F323N  NIRCam.F335M  NIRCam.F410M  NIRCam.F430M  NIRCam.F444W  NIRCam.F460M  NIRISS.F140M  NIRISS.F150W  NIRISS.F158M  NIRISS.F277W  NIRISS.F380M  NIRISS.F430M  NIRISS.F480M  NSFCam.K  NSFCam.Lp  NSFCam.Mp  PS1.i  (+4 more)
SEDkit/data/filters/: FourStar.J2  Gaia.G  JWST_NIRCam.F070W.dat.txt  JWST_NIRCam.F090W.dat.txt  JWST_NIRCam.F115W.dat.txt  JWST_NIRCam.F140M.dat.txt  JWST_NIRCam.F150W.dat.txt  JWST_NIRCam.F150W2.dat.txt  JWST_NIRCam.F162M.dat.txt  JWST_NIRCam.F164N.dat.txt  JWST_NIRCam.F182M.dat.txt  JWST_NIRCam.F187N.dat.txt  JWST_NIRCam.F200W.dat.txt  JWST_NIRCam.F210M.dat.txt  JWST_NIRCam.F212N.dat.txt  JWST_NIRCam.F250M.dat.txt  JWST_NIRCam.F277W.dat.txt  JWST_NIRCam.F300M.dat.txt  JWST_NIRCam.F322W2.dat.txt  JWST_NIRCam.F323N.dat.txt  JWST_NIRCam.F335M.dat.txt  JWST_NIRCam.F356W.dat.txt  JWST_NIRCam.F360M.dat.txt  JWST_NIRCam.F405N.dat.txt  JWST_NIRCam.F430M.dat.txt  JWST_NIRCam.F444W.dat.txt  JWST_NIRCam.F460M.dat.txt  JWST_NIRCam.F466N.dat.txt  JWST_NIRCam.F470N.dat.txt  JWST_NIRCam.F480M.dat.txt  JWST_NIRISS.F090W.dat.txt  JWST_NIRISS.F115W.dat.txt  JWST_NIRISS.F140M.dat.txt  JWST_NIRISS.F150W.dat.txt  JWST_NIRISS.F158M.dat.txt  JWST_NIRISS.F200W.dat.txt  JWST_NIRISS.F277W.dat.txt  JWST_NIRISS.F356W.dat.txt  JWST_NIRISS.F380M.dat.txt  JWST_NIRISS.F430M.dat.txt  (+15 more)
SEDkit/example_subpkg/: setup_package.py
SEDkit/notebooks/: blackbody_fit.ipynb  catalog_from_file.ipynb  create_catalog.ipynb  create_composite_spectrum.ipynb  create_sed.ipynb  making_modelgrids.ipynb  model_fitting.ipynb  norm_spectrum_to_mags.ipynb  norm_spectrum_to_spectrum.ipynb  scaling_spectra.ipynb  working_with_spectra.ipynb
SEDkit/tests/: test_sed.py  test_spectrum.py
astropy_helpers/astropy_helpers/: version.py
atlas/: ckp00ckp00_5750.fits
ci/: setup_conda_env.sh
data/: STScI_Vega.txt
docs/: catalog.rst  conf.py  index.rst  modelgrid.rst  sed.rst  spectrum.rst
docs/SEDkit/: index.rst
env/: environment-3.10.yml  environment-3.11.yml  environment-3.7.yml  environment-3.8.yml  environment-3.9.yml
licenses/: LICENSE.rst
notebooks/: making_modelgrids.ipynb
sedkit/: __init__.py  catalog.py  fitting.py  helpers.py  isochrone.py  mcmc.py  modelgrid.py  query.py  relations.py  sed.py  spectrum.py  synphot.py  uncertainties.py  utilities.py
sedkit/data/: AFGK_radii.txt  Gl752B_NIR.fits  Gl752B_OPT.txt  Trappist-1_NIR.fits  Trappist-1_OPT.fits  coords.txt  dwarf_sequence.txt  sources.txt
sedkit/notebooks/: Trappist-1.ipynb  catalog_from_file.ipynb  create_catalog.ipynb  create_sed.ipynb  sedkit_performance.ipynb
sedkit/tests/: test_catalog.py  test_fitting.py  test_isochrone.py  test_modelgrid.py  test_query.py  test_relations.py  test_sed.py  test_spectrum.py  test_uncertainties.py  test_utilities.py  test_utilties.py
source/: catalog.rst  conf.py  index.rst  modelgrid.rst  sed.rst  spectrum.rst
tests/: test_catalog.py  test_fundamental_params.py  test_helpers.py  test_isochrone.py  test_modelgrid.py  test_query.py  test_relations.py  test_sed.py  test_spectrum.py  test_uncertainties.py  test_utilities.py
tests/data/: 2MASS_J04151954-0935066_apparent_SED.txt
(+195 files in other folders)
