[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sedkit"
authors = [
    {name = "Joe Filippazzo", email = "jfilippazzo@stsci.edu"},
	{name= "Sherelyn Alejandro Merchan"}
	]
maintainers = [
    {name= "Kelle Cruz", email="kellecruz@gmail.com"}
	]
description="Spectral energy distribution construction and analysis tools"
keywords=['astronomy']
classifiers=[
	'Intended Audience :: Science/Research',
	"License :: OSI Approved :: MIT License",
	'Operating System :: OS Independent',
	'Programming Language :: Python :: 3',
	'Topic :: Scientific/Engineering :: Astronomy',
	'Topic :: Software Development :: Libraries :: Python Modules',
]
requires-python = ">=3.11,<=3.13"
dependencies = [
	"astropy>=6.1.3",
	"astroquery>=0.4.7",
	"bokeh>=3.2.1",
	"dill>=0.3.4",
	"dustmaps>=1.0.13",
	"emcee>=3.1.6",
	"numpy>=2.1",
	"pandas>=2.2.2",
	"scipy>=1.14.1",
	"svo-filters>=0.4.4",
	"setuptools>=64",
]
dynamic = ["version"]
readme = "README.md"

[tool.setuptools_scm]

[project.optional-dependencies]
test = [
    "pytest",
    ]

[tool.setuptools.packages.find]
exclude = ["source"]
