[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = SEDkit
description = Spectral energy distribution construction and analysis tools
long_description = Spectral energy distribution construction and analysis tools
author = Joe Filippazzo
author_email = jfilippazzo@stsci.edu
license = BSD 3-Clause
url = https://github.com/hover2pi/SEDkit
edit_on_github = False
github_project = hover2pi/SEDkit
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.1.2

[entry_points]

astropy-package-template-example = packagename.example_mod:main

